<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateGroup">

    <EditText
        android:id="@+id/editTextGroupName"
        android:layout_width="319dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/group_name"
        android:inputType="textNoSuggestions|text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:text="@string/add_members"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGroupName" />

    <!-- **********************************
        Start of the New Users Layouts
    ************************************-->

    <LinearLayout
        android:id="@+id/addUsersToGroupLayoutParent"
        android:layout_width="match_parent"
        android:layout_height="356dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">


        <EditText
            android:id="@+id/groupAddUser1"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="4dp"
            android:width="300dp"
            android:autofillHints=""
            android:hint="@string/addUserToGroup"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/groupAddUser2"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:width="300dp"
            android:autofillHints=""
            android:hint="@string/addUserToGroup"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/groupAddUser3"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:width="300dp"
            android:autofillHints=""
            android:hint="@string/addUserToGroup"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/groupAddUser4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:width="300dp"
            android:autofillHints=""
            android:hint="@string/addUserToGroup"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/groupAddUser5"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginVertical="10dp"
            android:width="300dp"
            android:autofillHints=""
            android:hint="@string/addUserToGroup"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="createGroup"
        android:text="@string/create_group"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addUsersToGroupLayoutParent" />

</androidx.constraintlayout.widget.ConstraintLayout>